--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="about2">
                     <h2 class="aboutheading">About Me</h2>
-                    <p class="aboutcontent">I'm Achyuth, a front-end developer passionate about creating visually engaging and responsive web applications. My journey in web development started with a love for design, and I am currently enhancing my skills in HTML, CSS, and JavaScript.
+                    <p class="aboutcontent">I'm Achyuth, a front-end developer passionate about creating visually engaging and responsive web applications. My journey in web development started with a love for design, and I am currently enhancing my skills in web development using React.
                         <br><br>While my focus is on front-end development, I aspire to transition into full-stack development. Outside of coding, I enjoy videography, editing, and motorsports.
                     </p>
                     <div class="tabs-title">
@@ -52,8 +52,8 @@
                     <div class="tab-content skilltab active-tab">
                         <ul>
                             <li class="skillList"><span class="skillname">Web Development</span><br>Design and developing responsive websites</li>
-                            <li class="skillList"><span class="skillname">Designer</span><br>Creative and beautiful graphic designs and videos</li>
-                            <li class="skillList"><span class="skillname">Editor</span><br>Adobe Premier Pro and After Effects</li>
+                            <li class="skillList"><span class="skillname">Designer</span><br>Creative and beautiful graphic designs</li>
+                            <li class="skillList"><span class="skillname">Editor</span><br> Edit videos and photos</li>
                         </ul>
                     </div>
                     <div class="tab-content experiencetab">
