--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 Hi, I'm Achyuth <br>and I am a <span></span>
             </div>
             <div class="cvdown">
-                <a href="./pdf/RESUME_August_2024.pdf" download="RESUME_August_2024.pdf">
+                <a href="images\RESUME January 2025.pdf" download="RESUME_January_2024.pdf">
                     <button>Download my CV</button>
                 </a>
             </div>
